syntax = "proto3";
import "Enums.proto";

option csharp_namespace = "WMTServer";

package Windmill;

service WindmillFarm {
  rpc RequestList (WindmillListRequest) returns (WindmillListResponse);
  rpc RequestWindmillStatus (WindmillStatusRequest) returns (WindmillInfo);
  rpc DisconnectFromGrid (.Windmill.WindmillStatusRequest) returns (WindmillInfo);
}

message WindmillListRequest {}

message WindmillListResponse {
  int32 TotalCount = 1;

  double AvgPowerGeneratedLastMinute = 2;

  double AvgPowerGeneratedLastHour = 3;

  repeated WindmillInfo Windmills = 4;
}

message WindmillStatusRequest {
	string WindmillId = 1;
}

message WindmillInfo {
	string WindmillId = 1;

	double AvgPowerGeneratedLastMinute = 2;

	double AvgPowerGeneratedLastHour = 3;

	Windmill.WindmillStatus Status = 4;
}